--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,199 @@ $reactColor: #011826;
     font-size: 3rem;
   }
 }
+
+header{
+  background: url('./images/bg2.jpg');
+  background-repeat: no-repeat;
+  height: 40vh;
+  background-size: cover;
+  background-position: center;
+}
+
+header::before{
+  content: '';
+  width: 100%;
+  height: 40vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(90deg, #1f2937, #111927);
+  opacity: 0.8;
+}
+
+.container{
+  width: 80%;
+  margin: auto;
+  height: 100%;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.title{
+  padding: 10px;
+  color: #82bf45;
+  font-size: 5rem;
+  font-family: Shlop;
+}
+
+.text {
+  color: #17a3ac;
+  font-size: 17px;
+  font-family: Shlop;
+}
+
+.characters{
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.box{
+  width: 30%;
+  background-color: #1f2937;
+  margin: 30px;
+  border-radius: 4px;
+  box-shadow: 4px 5px #cfcfcf;
+  display: flex;
+  img{
+    width: 50%;
+  }
+  .character{
+    width: 100%;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .name{
+      font-family: Shlop;
+      font-size: 38px;
+      color: #82bf45;
+    }
+    .species{
+      text-align: center;
+      padding: 5px;
+      background-color: #364150;
+      color: white;
+      border-radius: 4px;
+      text-transform: uppercase;
+      font-size: 19px;
+      margin: 3px 0;
+      font-family: Shlop;
+    }
+    .status{
+      text-align: center;
+      color: white;
+      padding: 4px;
+      background-color: #364150;
+      border-radius: 4px;
+      text-transform: uppercase;
+      font-size: 9px;
+      margin: 3px 0;
+    }
+  }
+}
+
+@media (max-width: 1588px){
+  .container{
+    width: 85%;
+  }
+  .box{
+    .character{
+      .name{
+        font-size: 35px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1450px){
+  .container{
+    width: 90%;
+  }
+}
+
+@media (max-width: 1300px){
+  .container{
+    width: 95%;
+  }
+}
+
+@media (max-width: 1230px){
+  .container{
+    width: 100%;
+  }
+  .box{
+    width: 35%;
+  }
+}
+
+@media (max-width: 1080px){
+  .box{
+    width: 45%;
+  }
+}
+
+@media (max-width: 860px) {
+  .container{
+    width: 80%;
+  }
+  .box{
+    width: 100%;
+  }
+}
+
+@media (max-width: 636px){
+  .title{
+    font-size: 4rem;
+    padding: 5px;
+  }
+}
+
+@media (max-width: 534px){
+  .container{
+    width: 90%;
+  }
+  .text{
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 444px){
+  .container{
+    width: 95%;
+  }
+  .title{
+    padding: 4px;
+  }
+}
+
+@media (max-width: 416px){
+  .container{
+    width: 100%;
+  }
+  .title{
+    padding: 3px;
+  }
+}
+
+@media (max-width: 392px){
+  .title{
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 378px){
+  .title{
+    font-size: 13px;
+  }
+}
